Fixed overflow issue with white container

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     height: fit-content;
     position: absolute;
     inset: 0;
+    padding-bottom: 15px;
     margin-top: clamp(3%, 8%, 10%);
     margin-bottom: clamp(5%, 10%, 15%);
    /* overflow: auto; */
@@ -32,10 +33,13 @@ body {
     background: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    padding: 1rem;
     z-index: 1;
     border-radius: 20px;
+}
+
+#white-container > * {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
 }
 
 h1 {
@@ -63,7 +67,7 @@ h1 {
 #bottom-color {
     background-color: hsl(275, 100%, 97%);
     height: 100vh;
-    bottom: 0;
+    bottom: -10px;
 }
 
 body {
@@ -85,8 +89,8 @@ body {
 
 @media (max-width: 480px) {
     #white-container {
-        width: 90%;
-        height: auto;
+        width: 80%;
+        height: minmax(500px,800px);
     }
 }
 
